--- a/backend/templates/partials/navigation.html
+++ b/backend/templates/partials/navigation.html
@@ -10,7 +10,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--  PlayMaker - logo (jasne) - NotoSans _ medium.svg  -->
       <!--PlayMaker - logo (jasne) - NotoSans _ medium.png -->
-      <a href="/" class="logo mr-auto"><img src="{% static 'assets/img/PlayMaker - logo (jasne) - NotoSans _ medium.png' %}" alt="logo"></a>
+      <a href="/" class="logo mr-auto"><img src="{% static 'assets/img/playmaker_logo_light.png' %}" alt="logo"></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
