--- a/soccerbase/templates/soccerbase/_pagination.html
+++ b/soccerbase/templates/soccerbase/_pagination.html
@@ -1,8 +1,9 @@
     
 {% load i18n %}
-    
+
 <div class="pagination">
-    <span class="step-links">
+
+    <span class="step-links text-center float-left">
         {% if page_obj.has_previous %}
             <a href="?page=1">&laquo; {% trans 'pierwsza' %}</a>
             <a href="?page={{ page_obj.previous_page_number }}">{% trans 'poprzednia' %}</a>
@@ -17,4 +18,10 @@
             <a class="btn-pm btn-pm-sm" href="?page={{ page_obj.paginator.num_pages }}">{% trans 'ostatnia' %} &raquo;</a>
         {% endif %}
     </span>
+    <br>
+
+    <span class="">     
+        <span class="main-color"> {{ page_obj.elements }}</span> /  <span class="main-color">{{ page_obj.paginator.count }} </span>wszystkich wpisów
+    </span>
+
 </div>
