--- a/soccerbase/templates/soccerbase/base.html
+++ b/soccerbase/templates/soccerbase/base.html
@@ -1,5 +1,14 @@
 {% extends 'base_inner.html' %}
 
+{% load static %}
+
+
+
+{% block extra_css %}
+    {{ block.super }}
+    <link href="{% static 'assets/css/tables.css' %}" rel="stylesheet">
+{% endblock extra_css %}
+
 
 {% block content %}
 
