--- a/soccerbase/templates/soccerbase/tables/players.html
+++ b/soccerbase/templates/soccerbase/tables/players.html
@@ -2,7 +2,7 @@
 
   <table class="table w-auto">
   {% if caption %}
-    <caption><a href="{% url 'profiles:player_games' %}" >{% trans 'Zobacz więcej' %}</a></caption>
+    <caption><a href="{% url 'tables:players' %}" >{% trans 'Zobacz więcej' %}</a></caption>
     {% endif %}
     <thead>
         <tr> 
@@ -16,11 +16,13 @@
                 <th scope="col" class="d-none d-md-table-cell">{% trans 'Rozgrywki' %}</th>
                 <th scope="col" class="d-none d-md-table-cell">{% trans 'Obecny zespół' %}</th>
                 <th scope="col" class="d-none d-md-table-cell">{% trans 'Wojewódźtwo' %}</th>
-                <th scope="col" class="">{% trans 'Strzelone gole' %}</th>
-                <th scope="col" class="">{% trans 'Pierwszy skład' %}</th>
-                <th scope="col" class="">{% trans 'Rozegrane mecze' %}</th>
-                <th scope="col" class="">{% trans 'Rozegrane minuty' %}</th>
-                <th scope="col" class=""><i class="icofont-link-alt"></i></th>
+            <th scope="col" class="d-md-none">{% trans 'Statystyki' %}</th>
+                <th scope="col" class="d-none d-md-table-cell">{% trans 'Strzelone gole' %}</th>
+                <th scope="col" class="d-none d-md-table-cell">{% trans 'Pierwszy skład' %}</th>
+                <th scope="col" class="d-none d-md-table-cell">{% trans 'Rozegrane mecze' %}</th>
+                <th scope="col" class="d-none d-md-table-cell">{% trans 'Rozegrane minuty' %}</th>
+                
+            <th scope="col" class=""><i class="icofont-link-alt"></i></th>
 
         </tr>
     </thead>
@@ -31,24 +33,31 @@
                     {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %} {{ object.first_name|upper }} {{ object.last_name|upper }} {{ object.profile.get_position_raw_display|default:'-' }}
                     {{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %}
                 </td>
-                 {# aggregated field1 into filedX #}   <td class="d-none d-md-table-cell">{{ object.first_name|upper }} {{ object.last_name|upper }} {% if object.is_verified %}<i class="text-success icofont-verification-check">{% endif %}</td>
-                 {# aggregated field2 into filedX #}   <td class="d-none d-md-table-cell">{{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %}</td>  
-                {# aggregated field2 into filedX #}    <td class="d-none d-md-table-cell">{{ object.profile.get_position_raw_display|default:'-' }}</td>
+                    <td class="d-none d-md-table-cell"><a href="{{ object.profile.get_permalink }}"><i class="btn-pm btn-pm-sm icofont-user"></i> {{ object.first_name|upper }} {{ object.last_name|upper }}</a> {% if object.is_verified %}<i class="text-success icofont-verification-check">{% endif %}</td>
+                    <td class="d-none d-md-table-cell">{{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %}</td>  
+                    <td class="d-none d-md-table-cell">{{ object.profile.get_position_raw_display|default:'-' }}</td>
                 
                 <td class="d-md-none"> {# aggregated fieldX #}
-                    {{ object.profile.league|upper|default:'-'  }}<br>
-                    {{ object.profile.team|upper|default:'-'  }}<br>
-                    {{ object.profile.voivodeship|upper|default:'-' }}<br>
+                    {{ object.profile.league|default:'-'|upper  }}<br>
+                    {{ object.profile.team|default:'-'|upper  }}<br>
+                    {{ object.profile.voivodeship|default:'-'|upper|truncatechars:10 }}<br>
                 </td>
-                    {# aggregated field1 into filedX #} <td class="d-none d-md-table-cell">{{ object.profile.league|default:'-'  }}</td>
-                    {# aggregated field1 into filedX #} <td class="d-none d-md-table-cell">{{ object.profile.team|default:'-'  }}</td>
-                    {# aggregated field2 into filedX #} <td class="d-none d-md-table-cell">{{ object.profile.voivodeship|default:'-' }}</td>
+                    <td class="d-none d-md-table-cell">{{ object.profile.league|default:'-'|upper  }}</td>
+                    <td class="d-none d-md-table-cell">{{ object.profile.team|default:'-'|upper  }}</td>
+                    <td class="d-none d-md-table-cell">{{ object.profile.voivodeship|default:'-'|upper|truncatechars:10 }}</td>
 
-                <td class="">{{ object.profile.playermetrics.season_summary.team_goals|default:'-' }}</td>
-                <td class="">{{ object.profile.playermetrics.season_summary.first_squad_games_played|default:'-' }}</td>
-                <td class="">{{ object.profile.playermetrics.season_summary.games_played|default:'-' }}</td>
-                <td class="">{{ object.profile.playermetrics.season_summary.minutes_played |default:'-' }}</td>
-                <td class="text-right"><a class="btn-pm btn-pm-sm" href="{{ object.profile.get_permalink }}"><i class="icofont-user"></i></a></td>
+                <td class="d-md-none"> {# aggregated fieldX #}
+                    <div> <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> gole</div>
+                    <div> <span class="main-color">{{ object.profile.playermetrics.season_summary.first_squad_games_played|default:'0' }}</span>  w pierwszn składzie </div>
+                    <div> <span class="main-color">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</span>  mecze </div>
+                    <div> <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span>  minuty </div>
+                </td>
+                <td class="d-none d-md-table-cell">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</td>
+                <td class="d-none d-md-table-cell">{{ object.profile.playermetrics.season_summary.first_squad_games_played|default:'0' }}</td>
+                <td class="d-none d-md-table-cell">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</td>
+                <td class="d-none d-md-table-cell">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</td>
+
+                <td class="text-right"></td>
             </tr>
             {% endfor %}
 
