Datetime picker and profile verification form dispatcher

--- a/profiles/templates/profiles/base.html
+++ b/profiles/templates/profiles/base.html
@@ -10,6 +10,17 @@
     <link href="{% static 'assets/css/modals.css' %}" rel="stylesheet">
     <!-- test out -->
     <!-- link rel="stylesheet/less" type="text/css" href="{% static 'assets/css/table1.less' %}" /-->
+
+
+     <!-- Font Awesome -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <!-- Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js" integrity="sha256-VBLiveTKyUZMEzJd6z2mhfxIqz3ZATCuVMawPZGzIfA=" crossorigin="anonymous"></script>
+
+    <!-- Tempus Dominus Bootstrap 4 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css" integrity="sha256-XPTBwC3SBoWHSmKasAk01c08M6sIA5gF5+sRxqak2Qs=" crossorigin="anonymous" />
+  
 {% endblock extra_css%}
 
 
@@ -73,5 +84,6 @@
 
   <!--testout-->
   <!--script src="//cdn.jsdelivr.net/npm/less" ></script-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/js/tempusdominus-bootstrap-4.min.js" integrity="sha256-z0oKYg6xiLq3yJGsp/LsY9XykbweQlHl42jHv2XTBz4=" crossorigin="anonymous"></script>
 
-{% endblock extra_js%}
+{% endblock extra_js%} 
